# B4Lecture-2024

./: CONTRIBUTING.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/workflows/: checker.yml  (+5 more)
ci/: assign_reviewers.py  users.csv
docs/: TIPS.md  actions_manual.md  vscode.md
ex1/: README.md  convert2mono.py  main.py
ex2/: README.md
ex3/: README.md  data1.csv  data2.csv  data3.csv
ex4/: README.md
ex5/: README.md  data1.csv  data2.csv  data3.csv
ex6/: README.md  data1.pickle  data2.pickle  data3.pickle  data4.pickle
ex7/: .gitignore  README.md  baseline.py  ex9_baseline_adam.py  ex9_baseline_adam_whitenoise.py  make_label.py  requirements.txt  setup.sh  test.csv  test_truth.csv  training.csv
ex8/: README.md  main.py  main_example.py  pyproject.toml  requirements.txt  run.sh
ex8/VAEs/: VAE.py
ex8/h_miyaji/: main.py
ex8/h_miyaji/VAEs/: VAE.py
ex8/h_miyaji/libs/: Visualize.py
ex8/h_yoshihara/: VAE.py  main.py
ex8/k_namizaki/: VAE8.py  Visualize8.py  loss_valid.txt  main8.py
ex8/libs/: Visualize.py
ex8/models/: VAE.py  VAE_example.py
ex8/params/: model_z_100_h_400.pth  model_z_10_h_400.pth  model_z_20_h_400.pth  model_z_2_h_200.pth  model_z_2_h_400.pth  model_z_3_h_400.pth  model_z_4_h_400.pth  model_z_5_h_400.pth
ex8/t_miura/: VAE.py  Visualize.py  main.py  run.sh
ex8/vanilla_vae/: __init__.py
ex8/y_ogawa/: main.py  run.sh
ex8/y_ogawa/VAEs/: VAE.py  VAE_example.py
ex8/y_ogawa/libs/: Visualize.py
ex9/: .gitignore  README.md  main.py  main_example.py  requirements.txt
k_namizaki/: main1.py  start.py
(+127 files in other folders)
